Wire chart data, design separation of chart options from chart data. Support bar chart, minor lint clean up.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!-- TODO @wnamen design the main page layout -->
+<!DOCTYPE html>
 <!-- <main-nav-bar></main-nav-bar> -->
 <div id="app" class="background-purple">
   <!-- routes render here -->
