--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <div class="">
   <form class="display-flex flex-column-center" (ngSubmit)="onSubmit($event)" #loginForm="ngForm">
     <h2>Cisco SSO Login</h2>
