--- a/src/app/components/ui/chart/bar-chart.component.html
+++ b/src/app/components/ui/chart/bar-chart.component.html
@@ -1,1 +1,1 @@
-<div> </div>
+<div #chartContainer (window:resize)="onChartResize($event)" class="full-size"><canvas #chartContent  (mousemove)="onMouseMove($event)" (pointerover)="onPointerOver($event)"></canvas></div>
