--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<!-- The Dashboard Component Content (Rendered to screen)-->
 <div class="display-flex">
   <!-- <div id="side-bar" class="col-sm-1 col-md-1 col-lg-1 large-padding small-border-right border-white background-blue">
     Cisco
@@ -12,7 +14,7 @@
         <img class="medium-border-right border-whitesmoke" src="/app/assets/images/cisco-logo-blue.svg" />
       </div>
       <div class="col-sm-9 col-md-9 col-lg-9 large-padding">
-        <search-menu #searchMenu (customerSelectionChanged)=onCustomerSelectionChanged($event) [model]='searchMenuModel'></search-menu>
+        <search-menu #searchMenu (customerSelectionChanged)=onCustomerSelectionChanged($event) [model]="searchMenuModel"></search-menu>
       </div>
       <div class="col-sm-2 col-md-2 col-lg-2">
         <button class="close-button medium-border border-red font-red card-radius right"
@@ -43,44 +45,14 @@
           <!-- Draw the cards -->
           <!-- TODO @wnamen - fix card layout -->
           <div #cards class="card-columns large-margin-top">
-            <card data-packed class="card no-background no-border large-margin" (clicked)=onCardClicked($event)
-              *ngFor="let dataPoint of selectedCustomerModel.data.datapoints"
-              [cardContentTemplate]='barchartTemplate'
-              [cardModel] ='{
-                title: dataPoint.title,
-                tags: getTagsFromCustomerDatapoint(dataPoint),
-                content: buildCardContentModel(dataPoint.content)
-              }'></card>
+            <card data-packed class="card no-background no-border large-margin"
+              *ngFor="let dataPoint of filterCustomerDatapoints(selectedCustomerModel.data.datapoints)"
+              [cardContentBuilder]="getContentBuilder(dataPoint.content.type)"
+              [cardModel] ='buildCardModel(dataPoint)'></card>
           </div>
         </div>
-
       </div>
     </div>
   </div>
 
 </div>
-
-<!-- Chart Templates used to build card components. Passed in to card components as Template Refs -->
-
-<!-- Bar Chart -->
-<template #barchartTemplate>
-  Bar Chart Component
-  <!--<bar-chart></bar-chart>-->
-</template>
-<!-- Line Chart -->
-<template #lineChart>
-  Bar Chart Component
-  <!--<bar-chart></bar-chart>-->
-</template>
-
-<!-- Pie Chart -->
-<template #pieChart>
-  Bar Chart Component
-  <!--<bar-chart></bar-chart>-->
-</template>
-
-<!-- Donut Chart -->
-<template #donutChart>
-  Bar Chart Component
-  <!--<bar-chart></bar-chart>-->
-</template>
