--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <div class="">
   <form class="display-flex flex-column-center" (ngSubmit)="onSubmit($event)" #loginForm="ngForm">
-    <h2>Cisco SSO Login</h2>
-    <div class="form-group"  >
-        <label for="email">Email</label>
-        <input type="text" class="form-control" name="email" [(ngModel)]="model.email" #email="ngModel" required />
+    <h2 class="font-white large-margin-bottom">Cisco SSO Sign In</h2>
+    <div id="login-inputs" class="large-margin-top large-margin-bottom">
+      <div class="form-group"  >
+          <input type="text" class="form-control font-white background-purple" name="email" placeholder="Email Address" [(ngModel)]="model.email" #email="ngModel" required />
+      </div>
+      <div class="form-group" >
+          <input type="password" class="form-control font-white background-purple" name="password" placeholder="Password" [(ngModel)]="model.password" #password="ngModel" required />
+      </div>
     </div>
-    <div class="form-group" >
-        <label for="password">Password</label>
-        <input type="password" class="form-control" name="password" [(ngModel)]="model.password" #password="ngModel" required />
-    </div>
-    <button type="submit" class="btn btn-primary">Login</button>
+    <button id="login-button" type="submit" class="btn btn-primary background-dark-green no-border">Sign In</button>
   </form>
+
+  <div id="signup-redirect" class="display-flex flex-row-center font-white large-margin-top">
+    <span class="medium-margin-right">Don't have an account yet?</span>
+    <a src="/signup">Sign Up</a>
+  </div>
 </div>
