--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,22 +1,24 @@
-<div class="">
+<div id="signup-form">
   <form class="display-flex flex-column-center" (ngSubmit)="onSubmit($event)" #signUpForm="ngForm">
-    <h2>Cisco SSO Signup</h2>
-    <div class="form-group" >
-        <label for="firstName">First Name</label>
-        <input type="text" class="form-control" name="firstName" [(ngModel)]="model.firstName" #firstName="ngModel" required />
+    <h2 class="font-white large-margin-bottom">Cisco SSO Signup</h2>
+    <div id="signup-inputs" class="large-margin-top large-margin-bottom">
+      <div class="form-group" >
+          <input type="text" class="form-control font-white background-purple" placeholder="First Name" name="firstName" [(ngModel)]="model.firstName" #firstName="ngModel" required />
+      </div>
+      <div class="form-group" >
+          <input type="text" class="form-control font-white background-purple" placeholder="Last Name" name="lastName" [(ngModel)]="model.lastName" #lastName="ngModel" required />
+      </div>
+      <div class="form-group"  >
+        <input type="email" class="form-control font-white background-purple" placeholder="Email Address" name="email" [(ngModel)]="model.email" #email="ngModel" required />
+      </div>
+      <div class="form-group" >
+          <input type="password" class="form-control font-white background-purple" placeholder="Password" name="password" [(ngModel)]="model.password" #password="ngModel" required />
+      </div>
     </div>
-    <div class="form-group" >
-        <label for="lastName">Last Name</label>
-        <input type="text" class="form-control" name="lastName" [(ngModel)]="model.lastName" #lastName="ngModel" required />
+    <button id="signup-button" type="submit" class="btn btn-primary background-dark-green no-border">Sign Up</button>
+    <div id="login-redirect" class="display-flex flex-row-center font-white large-margin-top">
+      <span class="medium-margin-right">Already have an account?</span>
+      <a src="/#/signin">Sign In</a>
     </div>
-    <div class="form-group"  >
-      <label for="email">Email</label>
-      <input type="email" class="form-control" name="email" [(ngModel)]="model.email" #email="ngModel" required />
-    </div>
-    <div class="form-group" >
-        <label for="password">Password</label>
-        <input type="password" class="form-control" name="password" [(ngModel)]="model.password" #password="ngModel" required />
-    </div>
-    <button type="submit" class="btn btn-primary">Sign Up</button>
   </form>
 </div>
