resolved background color issues and began styling charts

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- The Dashboard Component Content (Rendered to screen)-->
 <div class="display-flex">
-  <div id="dash-view" class="background-white">
+  <div id="dash-view" class="background-linen">
 
     <!-- Search Menu Dropdown -->
     <div id="nav-dropdown-menu" class="display-flex bottom-shadow border-gray large-padding"
