--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- <main-nav-bar></main-nav-bar> -->
-<div id="app" class="background-purple">
+<div id="app" class="background-linen">
   <!-- routes render here -->
   <router-outlet></router-outlet>
 </div>
