--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -86,6 +86,11 @@
 
 }
 
+@media (min-width: 768px) {
+  .card-columns {
+        column-count: 4;
+  }
+}
 
 @media only screen and (max-width : 767px) {
   #nav-dropdown-menu {
