--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -61,3 +61,9 @@
 #signup-redirect a:hover {
   text-decoration: underline;
 }
+
+@media only screen and (max-width: 767px) {
+  #login-inputs, #login-button {
+    width: 65vw;
+  }
+}
