--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -86,9 +86,15 @@
 
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1200px) {
   .card-columns {
         column-count: 4;
+  }
+}
+
+@media (min-width: 577px) and (max-width: 900px) {
+  .card-columns {
+        column-count: 2;
   }
 }
 
