Document windows build and start process with new auth service. Fix some minor auth issues

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -15,6 +15,6 @@
 
   <div id="signup-redirect" class="display-flex flex-row-center font-white large-margin-top">
     <span class="medium-margin-right">Don't have an account yet?</span>
-    <a src="/signup">Sign Up</a>
+    <a href="/#/signup">Sign Up</a>
   </div>
 </div>
