finished chart styling and responsiveness

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -34,10 +34,10 @@
       [class.dash-active]="toggled">
 
       <div id="top-dash" class="background-blue display-flex large-padding">
-        <div class="hidden-sm-down col-md-2 col-lg-1 large-margin-right">
+        <div class="hidden-sm-down col-md-1 col-lg-1 large-margin-right">
           <img class="medium-border-right border-whitesmoke" src="/app/assets/images/cisco-logo-white.svg" />
         </div>
-        <div class="col-xs-12 col-sm-12 col-md-10 col-lg-11 large-padding-top no-padding-left">
+        <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10 large-padding-top">
           <div class="display-inline-flex">
             <div class="hidden-md-up large-margin-right">
               <img class="medium-border-right border-whitesmoke" src="/app/assets/images/cisco-logo-white.svg" />
