--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -86,13 +86,13 @@
 
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1280px) {
   .card-columns {
         column-count: 4;
   }
 }
 
-@media (min-width: 577px) and (max-width: 900px) {
+@media (min-width: 577px) and (max-width: 1000px) {
   .card-columns {
         column-count: 2;
   }
@@ -101,5 +101,11 @@
 @media only screen and (max-width : 767px) {
   #nav-dropdown-menu {
     padding: 0;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  #top-dash {
+    padding-left: 1em;
   }
 }
