--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<div class="">
+<div id="login-form">
   <form class="display-flex flex-column-center" (ngSubmit)="onSubmit($event)" #loginForm="ngForm">
     <h2 class="font-white large-margin-bottom">Cisco SSO Sign In</h2>
     <div id="login-inputs" class="large-margin-top large-margin-bottom">
