Fix the signup / login links

--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -18,7 +18,7 @@
     <button id="signup-button" type="submit" class="btn btn-primary background-dark-green no-border">Sign Up</button>
     <div id="login-redirect" class="display-flex flex-row-center font-white large-margin-top">
       <span class="medium-margin-right">Already have an account?</span>
-      <a src="/#/signin">Sign In</a>
+      <a href="/#/login">Sign In</a>
     </div>
   </form>
 </div>
