--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -6,7 +6,7 @@
   left: 0;
   z-index: 99;
   transition: top 300ms cubic-bezier(0.17, 0.04, 0.03, 0.94);
-  box-shadow: 0px 1px 50px black;
+  box-shadow: 0 1px 50px black;
 }
 
 #nav-body {
@@ -15,7 +15,8 @@
 
 #dash-body {
   width: 100vw;
-  height: 60vw;
+  height: 100vw;
+  overflow: hidden;
   transition: margin 300ms cubic-bezier(0.17, 0.04, 0.03, 0.94);
 }
 
@@ -29,7 +30,8 @@
   background-color: white;
 }
 
-#side-nav-dropdown img, #top-dash img {
+#side-nav-dropdown img,
+#top-dash img {
   padding: 1em 2em 1em 0;
 }
 
@@ -68,22 +70,30 @@
   border: none;
 }
 
-.cards {
-	display: -webkit-flex;
-	display: flex;
-	-webkit-justify-content: center;
-	justify-content: center;
-	-webkit-flex-wrap: wrap;
-	flex-wrap: wrap;
-	margin-top: 15px;
-	padding: 1.5%;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
+.scroll-box-v {
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
-.card {
+.cards {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin-top: 15px;
+  padding: 1.5%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
 
+.card-container {
+  width:100%;
+  height:100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 @media (min-width: 1600px) and (max-width: 4096px) {
@@ -91,37 +101,31 @@
     column-count: 5;
   }
 }
-
 @media (min-width: 1600px) and (max-width: 2400px) {
   .card-columns {
     column-count: 4;
   }
 }
-
 @media (min-width: 1280px) and (max-width: 1599px) {
   .card-columns {
-     column-count: 3;
+    column-count: 3;
   }
 }
-
 @media (min-width: 577px) and (max-width: 1000px) {
   .card-columns {
-      column-count: 2;
+    column-count: 2;
   }
 }
-
 @media (min-width: 100px) and (max-width: 576px) {
   .card-columns {
-      column-count: 1;
+    column-count: 1;
   }
 }
-
 @media only screen and (max-width : 767px) {
   #nav-dropdown-menu {
     padding: 0;
   }
 }
-
 @media only screen and (min-width: 768px) {
   #top-dash {
     padding-left: 1em;
