--- a/src/app/components/ui/selectors/customer-selector.component.scss
+++ b/src/app/components/ui/selectors/customer-selector.component.scss
@@ -18,6 +18,7 @@ customer-selector {
 }
 
 .option-tag {
+  font-family: 'Open Sans', sans-serif;
   min-width: 10em;
   width: 15em;
   padding: 1em;
