--- a/src/app/components/ui/selectors/tag-selector.component.scss
+++ b/src/app/components/ui/selectors/tag-selector.component.scss
@@ -17,6 +17,7 @@ tag-selector {
 }
 
 .option-tag {
+  font-family: 'Open Sans', sans-serif;
   min-width: 10em;
   width: 15em;
   padding: 0.7em 0;
