--- a/src/app/components/ui/tagbar/tagbar-item.component.scss
+++ b/src/app/components/ui/tagbar/tagbar-item.component.scss
@@ -5,17 +5,16 @@
   box-sizing: border-box;
   cursor: pointer;
   display:inline;
+  font-size: small;
   padding: 0.1em 0.4em;
   text-align: center;
   vertical-align: baseline;
   white-space: nowrap;
   width: auto;
+  padding: 4px;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-.tagbar-item span {
-  font-size: large;
-}
 
 .tagbar-item [role="remove"] {
   margin-left: 8px;
