--- a/src/app/components/ui/chart/bar-chart.component.html
+++ b/src/app/components/ui/chart/bar-chart.component.html
@@ -1,1 +1,3 @@
-<div #chartContainer (window:resize)="onChartResize($event)" class="full-size"><canvas #chartContent></canvas></div>
+<div #chartContainer (window:resize)="onChartResize($event)" class="full-size">
+  <canvas #chartContent></canvas>
+</div>
