--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,62 +1,59 @@
 <!DOCTYPE html>
 <!-- The Dashboard Component Content (Rendered to screen)-->
-<div class="display-flex">
+<div class="container-fluid no-scroll no-padding">
   <div id="dash-view" class="background-linen">
 
     <!-- Search Menu Dropdown -->
-    <div id="nav-dropdown-menu" class="display-flex bottom-shadow border-gray large-padding"
-      [class.menu-active]="toggled">
-      <div id="side-nav-dropdown" class="hidden-sm-down col-md-2 col-lg-1 large-margin-right">
+    <div id="nav-dropdown-menu" class="display-flex bottom-shadow border-gray large-padding" [class.menu-active]="toggled">
+      <div id="side-nav-dropdown" class="hidden-sm-down col-md-2 col-lg-1 large-padding-right">
         <img class="medium-border-right border-whitesmoke" src="/app/assets/images/cisco-logo-blue.svg" />
       </div>
       <div id="nav-body" class="display-flex col-xs-10 col-sm-10 col-md-8 col-lg-8 large-padding">
         <div class="hidden-md-up">
-          <button class="close-button medium-border border-red font-red card-radius right"
-            (click)="handleMenuToggle()">&times;</button>
+          <button class="close-button medium-border border-red font-red card-radius right" (click)="handleMenuToggle()">&times;</button>
         </div>
         <search-menu #searchMenu (customerSelectionChanged)='onCustomerSelectionChanged($event)'></search-menu>
       </div>
       <div class="hidden-sm-down col-md-2 col-lg-2">
-        <button class="close-button medium-border border-red font-red card-radius right"
-          (click)="handleMenuToggle()">&times;</button>
+        <button class="close-button medium-border border-red font-red card-radius right" (click)="handleMenuToggle()">&times;</button>
       </div>
     </div>
 
-
-    <!-- Dashboard SearchBar -->
-    <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10 display-none">
-      <!-- TODO @barcher, @wnamen eventually will display the tag items based on search selection -->
-      <tagbar #dashboardTagBar (tagsChanged)='onTagBarSelectionChange($event)'></tagbar>
-    </div>
-
     <!--  -->
-    <div id="dash-body" class="background-linen"
-      [class.dash-active]="toggled">
-
-      <div id="top-dash" class="background-blue display-flex large-padding">
-        <div class="hidden-sm-down col-md-1 col-lg-1 large-margin-right">
-          <img class="medium-border-right border-whitesmoke" src="/app/assets/images/cisco-logo-white.svg" />
+    <div id="dash-body" class="background-linen" [class.dash-active]="toggled">
+      <div id="dash-bg">
+        <div id="top-dash" class="background-blue display-flex large-padding">
         </div>
-        <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10 large-padding-top">
-          <div class="display-inline-flex">
-            <div class="hidden-md-up large-margin-right">
+      </div>
+      <div id="dash-content">
+        <div class="col-xs-10 col-sm-10 col-md-11 col-lg-11 large-padding-top">
+          <div class="display-inline-flex large-padding-bottom">
+            <div class="hidden-sm-down col-md-2 col-lg-1 large-margin-right">
               <img class="medium-border-right border-whitesmoke" src="/app/assets/images/cisco-logo-white.svg" />
             </div>
-            <button id="toggle" (click)="handleMenuToggle()">
-              <i class="fa fa-search large-margin-right font-whitesmoke" aria-hidden="true"></i>
-              <span class="font-whitesmoke">Search for customers, metrics, or categories</span>
-            </button>
+            <div class="hidden-md-up">
+              <img class="border-whitesmoke" src="/app/assets/images/cisco-logo-white.svg" />
+            </div>
+            <div class="large-padding-left">
+              <button id="toggle" (click)="handleMenuToggle()">
+                  <i class="fa fa-search large-margin-right font-whitesmoke" aria-hidden="true"></i>
+                  <span class="font-whitesmoke">Search for customers, metrics, or categories</span>
+                </button>
+            </div>
           </div>
 
-          <!-- Draw the cards -->
-          <div #cards class="card-columns large-margin-top">
-            <card data-packed class="card no-background no-border"
-            *ngFor="let dataPoint of filterCustomerDatapoints(selectedCustomerModel.data.datapoints)"
-            (tagSelected)="onCardTagSelected($event)"
-            [cardContentBuilder]="getContentBuilder(dataPoint.content.type)"
-            [cardModel] ='buildCardModel(dataPoint)'></card>
+          <div id="card-container-scroll" class="sbstyle-5">
+            <!-- Draw the cards -->
+            <div #cards id="card-container" class="card-columns">
+              <card data-packed class="card no-background no-border"
+                *ngFor="let dataPoint of filterCustomerDatapoints(selectedCustomerModel.data.datapoints)"
+                (tagSelected)="onCardTagSelected($event)"
+                [cardContentBuilder]="getContentBuilder(dataPoint.content.type)"
+                [cardModel]='buildCardModel(dataPoint)'></card>
+            </div>
           </div>
         </div>
+
       </div>
     </div>
   </div>
