--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -15,11 +15,68 @@
 
 #dash-body {
   width: 100vw;
-  height: 100vw;
-  overflow: hidden;
+  height:100vh;
+  position:relative;
   transition: margin 300ms cubic-bezier(0.17, 0.04, 0.03, 0.94);
 }
 
+#dash-bg {
+  position: absolute;
+  width:100%;
+  height:100%;
+}
+
+#dash-content {
+  position: absolute;
+  width:100%;
+  height:100%;
+}
+
+// .scrollbar
+// {
+// 	margin-left: 30px;
+// 	float: left;
+// 	height: 300px;
+// 	width: 65px;
+// 	background: #f4f1ea;
+// 	overflow-y: scroll;
+// 	margin-bottom: 25px;
+// }
+
+.sbstyle-5::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #f4f1ea;
+}
+
+.sbstyle-5::-webkit-scrollbar
+{
+	width: 10px;
+	background-color: #f4f1ea;
+}
+
+.sbstyle-5::-webkit-scrollbar-thumb
+{
+	background-color: #0ae;
+
+	background-image: -webkit-gradient(linear, 0 0, 0 100%,
+	                   color-stop(.5, rgba(255, 255, 255, .2)),
+					   color-stop(.5, transparent), to(transparent));
+}
+
+#card-container-scroll {
+  max-width: 100vw;
+  max-height: 88vh;
+  overflow-y: auto;
+  overflow-x: auto;
+}
+#card-container {
+
+}
+
+.grid-item {
+  max-width: 250px;
+}
 #top-dash {
   height: 40vh;
 }
