--- a/src/app/assets/styles/sass/_general.scss
+++ b/src/app/assets/styles/sass/_general.scss
@@ -34,6 +34,10 @@
   justify-content: space-between;
 }
 
+.flex-center {
+  align-items: center;
+}
+
 .flex-row-spread {
   flex-direction: row;
   align-items: center;
