--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -26,10 +26,10 @@
         </div>
       </div>
       <div id="dash-content">
-        <div class="col-xs-10 col-sm-10 col-md-11 col-lg-11 large-padding-top">
-          <div class="display-inline-flex large-padding-bottom">
-            <div class="hidden-sm-down col-md-2 col-lg-1 large-margin-right">
-              <img class="medium-border-right border-whitesmoke" src="/app/assets/images/cisco-logo-white.svg" />
+        <div class="col-xs-10 col-sm-12 col-md-12 col-lg-12 large-padding-top">
+          <div class="display-inline-flex flex-center large-padding-bottom">
+            <div class="hidden-sm-down col-md-2 col-lg-2 large-margin-right">
+              <img class="medium-border-right border-whitesmoke large-padding no-padding-left" src="/app/assets/images/cisco-logo-white.svg" />
             </div>
             <div class="hidden-md-up">
               <img class="border-whitesmoke" src="/app/assets/images/cisco-logo-white.svg" />
