--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -43,25 +43,30 @@
 // 	margin-bottom: 25px;
 // }
 
-.sbstyle-5::-webkit-scrollbar-track
-{
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	background-color: #f4f1ea;
-}
+// .sbstyle-5::-webkit-scrollbar-track
+// {
+// 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+// 	background-color: #f4f1ea;
+// }
+//
+// .sbstyle-5::-webkit-scrollbar
+// {
+// 	width: 10px;
+// 	background-color: #f4f1ea;
+// }
+//
+// .sbstyle-5::-webkit-scrollbar-thumb
+// {
+// 	background-color: #0ae;
+//
+// 	background-image: -webkit-gradient(linear, 0 0, 0 100%,
+// 	                   color-stop(.5, rgba(255, 255, 255, .2)),
+// 					   color-stop(.5, transparent), to(transparent));
+// }
 
-.sbstyle-5::-webkit-scrollbar
-{
-	width: 10px;
-	background-color: #f4f1ea;
-}
-
-.sbstyle-5::-webkit-scrollbar-thumb
-{
-	background-color: #0ae;
-
-	background-image: -webkit-gradient(linear, 0 0, 0 100%,
-	                   color-stop(.5, rgba(255, 255, 255, .2)),
-					   color-stop(.5, transparent), to(transparent));
+::-webkit-scrollbar {
+  background: transparent;
+  width: 0;
 }
 
 #card-container-scroll {
@@ -69,6 +74,7 @@
   max-height: 88vh;
   overflow-y: auto;
   overflow-x: auto;
+  padding: 0 5em;
 }
 #card-container {
 
@@ -89,7 +95,7 @@
 
 #side-nav-dropdown img,
 #top-dash img {
-  padding: 1em 2em 1em 0;
+  padding: 1em 1em 1em 0;
 }
 
 #toggle {
