--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -8,7 +8,7 @@
       <div id="side-nav-dropdown" class="hidden-sm-down col-md-2 col-lg-1 large-padding-right">
         <img class="medium-border-right border-whitesmoke" src="/app/assets/images/cisco-logo-blue.svg" />
       </div>
-      <div id="nav-body" class="display-flex col-xs-10 col-sm-10 col-md-8 col-lg-8 large-padding">
+      <div id="nav-body" class="display-flex col-xs-10 col-sm-12 col-md-8 col-lg-9 large-padding">
         <div class="hidden-md-up">
           <button class="close-button medium-border border-red font-red card-radius right" (click)="handleMenuToggle()">&times;</button>
         </div>
@@ -28,8 +28,8 @@
       <div id="dash-content">
         <div class="col-xs-10 col-sm-12 col-md-12 col-lg-12 large-padding-top">
           <div class="display-inline-flex flex-center large-padding-bottom">
-            <div class="hidden-sm-down col-md-2 col-lg-2 large-margin-right">
-              <img class="medium-border-right border-whitesmoke large-padding no-padding-left" src="/app/assets/images/cisco-logo-white.svg" />
+            <div id="dash-img" class="hidden-sm-down col-md-2 col-lg-2">
+              <img class="medium-border-right border-whitesmoke" src="/app/assets/images/cisco-logo-white.svg" />
             </div>
             <div class="hidden-md-up">
               <img class="border-whitesmoke" src="/app/assets/images/cisco-logo-white.svg" />
