removed css error

--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -64,7 +64,7 @@
 // 					   color-stop(.5, transparent), to(transparent));
 // }
 
-::-webkit-scrollbar, ::-moz-scrollbar {
+::-webkit-scrollbar{
   background: transparent;
   width: 0;
 }
