--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -36,16 +36,16 @@
             </div>
             <div class="large-padding-left">
               <button id="toggle" (click)="handleMenuToggle()">
-                  <i class="fa fa-search large-margin-right font-whitesmoke" aria-hidden="true"></i>
-                  <span class="font-whitesmoke">Search for customers, metrics, or categories</span>
-                </button>
+                <i class="fa fa-search large-margin-right font-whitesmoke" aria-hidden="true"></i>
+                <span class="font-whitesmoke">Search for customers, metrics, or categories</span>
+              </button>
             </div>
           </div>
 
           <div id="card-container-scroll" class="sbstyle-5">
             <!-- Draw the cards -->
             <div #cards id="card-container" class="card-columns">
-              <card data-packed class="card no-background no-border"
+              <card data-packed class="cards no-background no-border no-margin"
                 *ngFor="let dataPoint of filterCustomerDatapoints(selectedCustomerModel.data.datapoints)"
                 (tagSelected)="onCardTagSelected($event)"
                 [cardContentBuilder]="getContentBuilder(dataPoint.content.type)"
