--- a/src/app/components/ui/selectors/tag-selector.component.scss
+++ b/src/app/components/ui/selectors/tag-selector.component.scss
@@ -12,6 +12,7 @@ tag-selector {
 .option-tag-box {
   min-width: 10em;
   width: 15em;
+  background: none;
   border: none;
   padding: 0;
 }
@@ -19,8 +20,8 @@ tag-selector {
 .option-tag {
   font-family: 'Open Sans', sans-serif;
   min-width: 10em;
-  width: 15em;
-  padding: 0.7em 0;
+  width: 13em;
+  padding: 1em;
   text-align: left;
   font-size: small;
   font-weight: 400;
