added side nav with search button and logout button

--- a/src/app/assets/styles/sass/_general.scss
+++ b/src/app/assets/styles/sass/_general.scss
@@ -22,7 +22,6 @@
   display: inline-flex !important;
 }
 
-
 .flex-row-center{
   flex-direction: row;
   align-items: center;
@@ -33,6 +32,14 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.flex-column {
+  flex-direction: column;
+}
+
+.flex-row {
+  flex-direction: row;
 }
 
 .flex-spread{
