--- a/src/app/components/ui/card/card.component.scss
+++ b/src/app/components/ui/card/card.component.scss
@@ -33,6 +33,12 @@
   outline: none;
 }
 
+.card-popover, .card-download {
+  font-size: 16px;
+  outline: none;
+  cursor: pointer;
+}
+
 @media (min-width: 577px) {
   .dash-card {
       margin-top:0px
