completed settings view and routing

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -31,7 +31,7 @@
             <div id="mobile-dash-bar" class="hidden-md-up flex-row-spread">
               <i (click)="handleMenuToggle()" class="fa fa-search font-whitesmoke" aria-hidden="true"></i>
               <img class="border-whitesmoke" src="/app/assets/images/cisco-logo-white.svg" />
-              <i (click)="logout()" class="fa fa-sign-out font-whitesmoke" aria-hidden="true"></i>
+              <a href="/#/settings"><i class="fa fa-cog font-whitesmoke" aria-hidden="true"></i></a>
             </div>
             <div id="dash-img" class="hidden-sm-down col-md-2 col-lg-2">
               <img class="medium-border-right border-whitesmoke" src="/app/assets/images/cisco-logo-white.svg" />
@@ -45,8 +45,8 @@
           </div>
           <div class="display-flex flex-row">
             <div id="side-nav" class="hidden-sm-down col-md-1 col-lg-1">
-              <i (click)="handleMenuToggle()" class="fa fa-search large-padding-bottom large-margin-left large-margin-bottom font-whitesmoke" aria-hidden="true"></i>
-              <i (click)="logout()" class="fa fa-sign-out large-padding-bottom large-margin-left large-margin-bottom font-whitesmoke" aria-hidden="true"></i>
+              <a href="/#/dashboard"><i class="fa fa-line-chart large-padding-bottom large-margin-left large-margin-bottom font-whitesmoke" aria-hidden="true"></i></a>
+              <a href="/#/settings"><i class="fa fa-cog large-padding-bottom large-margin-left large-margin-bottom font-whitesmoke" aria-hidden="true"></i></a>
             </div>
 
             <div id="card-container-scroll" class="col-xs-12 col-sm-12 col-md-11 col-lg-11 no-padding-left">
