--- a/src/app/components/settings/settings.component.scss
+++ b/src/app/components/settings/settings.component.scss
@@ -1,18 +1,3 @@
-#nav-dropdown-menu {
-  width: 100vw;
-  position: absolute;
-  background-color: white;
-  top: -500px;
-  left: 0;
-  z-index: 99;
-  transition: top 300ms cubic-bezier(0.17, 0.04, 0.03, 0.94);
-  box-shadow: 0 1px 50px black;
-}
-
-#nav-body {
-  flex-direction: column;
-}
-
 #dash-body {
   width: 100vw;
   height: 100vh;
@@ -29,6 +14,16 @@
 ::-webkit-scrollbar{
   background: transparent;
   width: 0;
+}
+
+.dash-card {
+  z-index: 98;
+  max-width: 500px;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  text-transform: uppercase;
+  font-size: small;
+  font-weight: 600;
+
 }
 
 #card-container-scroll {
@@ -51,6 +46,34 @@
   margin-bottom: 15px;
 }
 
+.card-title {
+  font-size: 1.2em;
+  letter-spacing: 1px;
+}
+
+.card-tag {
+  text-align: center;
+  font-size: 12px;
+  font-weight: bold;
+  width: auto;
+  height: 1.75em;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.card-tag:focus {
+  border: none;
+  outline: none;
+}
+
+.card-tag:hover {
+  transform: scale(1.2);
+}
+
+.card-content-row {
+  font-weight: 400;
+}
+
 .grid-item {
   max-width: 250px;
 }
@@ -70,13 +93,6 @@
 
 #mobile-dash-bar i {
   font-size: 2em;
-  cursor: pointer;
-}
-
-.menu-active {
-  top: 0 !important;
-  height: 383px !important;
-  background-color: white;
 }
 
 #side-nav-dropdown img {
@@ -175,9 +191,6 @@
   }
 }
 @media only screen and (max-width : 767px) {
-  #nav-dropdown-menu {
-    padding: 0;
-  }
   #dash-bar {
     width: 100%;
   }
