--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -63,6 +63,12 @@
 }
 
 @media only screen and (max-width: 767px) {
+  #login-form {
+    padding: 2em;
+  }
+  #login-form h2 {
+    margin: 0;
+  }
   #login-inputs, #login-button {
     width: 65vw;
   }
